--- a/html/weapon_card.html
+++ b/html/weapon_card.html
@@ -1,9 +1,15 @@
 <div class="flexrow weaponcard cardbg">
     <div class="flexcolumn leftside">
         <br>
-        <div class='flex flexcolumn white outline smooth' style='position : relative;'><br>        <ui name='ui_image'/><br>      </div><br>
-        <p><b>Price:</b> <input type='text' target='info.price'/></p>
-        <p><b>Encumbrance</b>: <input type='text' target='info.weight'/></p>
+        <div class='flex flexcolumn white outline smooth' style='position : relative;'>
+            <br>        
+            <ui name='ui_image'/><br>      
+        </div><br>
+
+        <div class="flexrow"><p><b>Price:</b></p> <input type='text' target='info.price'/></div>
+        <div class="flexrow"><p><b>Encumbrance</b>:</p> <input type='text' target='info.weight'/></div>
+        <div class="flexrow"><p><b>Rarity</b>:</p> <input type='text' target='info.rarity'/> </div>
+        <div class="flexrow"><p><b>Restricted?:</b></p><input type='checkbox' target='info.restricted' check='1' uncheck='0' isChecked='eval{info.restricted==1}' /></div>
     </div>
     <div class="flecolumn rightside">
 
@@ -11,7 +17,7 @@
             <tabs class="flexrow flexaround fit-x size4" tab-category='main-tab' tab-selected="alttext flexmiddle lrpadding smooth" tab-selected-style="height: 40px; width:100px; background-image:url(images/svg/tabbg-s.svg); font-family:'abel'; font-size:12pt; text-transform:uppercase ";'>
                 <tab class='flexmiddle link lrpadding cstab' primary="true">description</tab>
                 <tab class='flexmiddle link lrpadding cstab'>statistics</tab>
-                <tab class='flexmiddle link lrpadding cstab'>hardpoints</tab>
+                <tab class='flexmiddle link lrpadding cstab'>Modifications</tab>
         </div>
 
 
@@ -23,5 +29,63 @@
 
         </div>
 
+
+        <div class="flexcolumn" main-tab="statistics">
+
+            <div class="flexrow flexaround mainStats" style="margin-bottom:3px">
+                <div class="flexcolumn rtgbg">
+                    <input target="weapon.damage"/>
+                    <div class="rtglabel"> Damage</div>
+                </div>
+                <div class="flexcolumn rtgbg">
+                    <input target="weapon.critical" />
+                    <div class="rtglabel"> Critical;
+                    </div>
+                </div>
+            </div>
+
+            <div class ="flexcolumn statsborder">
+
+                <div class="flexrow weapstats"><p><b>Weapon Skill:</b></p> <select target ="weapon.skill">
+
+                        <option value ="0">Brawl</option>
+                        <option value="1">Melee</option>
+                        <option value="2">Gunnery</option>
+                        <option value="3">Ranged - Light</option>
+                        <option value="4">Ranged - Heavy</option>
+                        <option value="5">Lightsaber</option>
+                        <option value="6">Other</option> <!-- work out how to handle this later?-->
+                    </select>
+                </div>
+
+                <div class="flexrow weapstats"><p><b> Range:</b></p> <select target="weapon.range">
+                        <option value="0">Engaged</option>
+                        <option value="1">Short</option>
+                        <option value ="2"> Medium</option>
+                        <option value ="3"> Long</option>
+                        <option value ="4"> Extreme</option>
+                    </select></div>
+                <div class="flexrow weapstats"><p><b>Hardpoints:</b></p><input type="text" target="weapon.hardpoints.max"/></div>
+                <div class="flexrow flexaround">
+                    <div class="flexcolumn propertycol">
+                        <p><b>Ranked Qualities</b></p>
+                        <div class="flexrow scroll-y ranked-property">
+                            <list target="weapon.ranked_properties">
+                            <div cond="eval{@%path%=0}">eval{@%path%.name @%path%}</div>
+                            </list>
+
+                        </div>
+                    </div>
+                    <div class="flexcolumn propertycol">
+                        <p><b>Un-ranked Qualities</b></p>
+                        <div class="flexrow scroll-y ranked-property">
+                            <list target="weapon.unranked_properties">
+                            <div cond="eval{@%path%=0}">eval{@%path%.name}</div>
+                            </list>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
