--- a/html/weapon_card.html
+++ b/html/weapon_card.html
@@ -15,13 +15,14 @@
 
         <div class="flexrow weapontabs">
             <tabs class="flexrow flexaround fit-x size4" tab-category='main-tab' tab-selected="alttext flexmiddle lrpadding smooth" tab-selected-style="height: 40px; width:100px; background-image:url(images/svg/tabbg-s.svg); font-family:'abel'; font-size:12pt; text-transform:uppercase ";'>
-                <tab class='flexmiddle link lrpadding cstab' primary="true">description</tab>
+                <tab class='flexmiddle link lrpadding cstab' primary="true">basic</tab>
                 <tab class='flexmiddle link lrpadding cstab'>statistics</tab>
-                <tab class='flexmiddle link lrpadding cstab'>Modifications</tab>
+                <tab class="flexmiddle link lrpadding cstab">qualities</tab>
+                <tab class='flexmiddle link lrpadding cstab'>Hardpoints</tab>
         </div>
 
 
-        <div class="flexcolumn" main-tab='description'>
+        <div class="flexcolumn" main-tab='basic'>
             <input type="text" class="title" target="info.name" />
             <div class='flexcolumn info'>
                 <ui name='ui_rawNotes'/>    
@@ -34,17 +35,17 @@
 
             <div class="flexrow flexaround mainStats" style="margin-bottom:3px">
                 <div class="flexcolumn rtgbg">
-                    <input target="weapon.damage"/>
+                    <input target="weapon.dam"/>
                     <div class="rtglabel"> Damage</div>
                 </div>
                 <div class="flexcolumn rtgbg">
-                    <input target="weapon.critical" />
+                    <input target="weapon.crit" />
                     <div class="rtglabel"> Critical;
                     </div>
                 </div>
             </div>
 
-            <div class ="flexcolumn greyborder-round">
+            <div class ="flexcolumn greyborder-round" style="height:240px">
 
                 <div class="flexrow weapstats"><p><b>Weapon Skill:</b></p> <select target ="weapon.skill">
 
@@ -70,52 +71,58 @@
                     <div class="flexcolumn propertycol">
                         <p><b>Ranked Qualities</b></p>
                         <div class="flexrow scroll-y ranked-property">
-                            <list target="weapon.ranked_properties">
-                            <div cond="eval{@%path%=0}">eval{@%path%.name @%path%}</div>
-                            </list>
+                            <bank target="weapon.ranked_properties">
+                                <div cond="eval{@%path%>0}">eval{@%path%.name @%path%}</div>
+                            </bank>
 
 
-                        </div>
-
-                        <div class="sheetbutton">Modify
-                            <click>
-                                <prompt>
-                                    <div class="greyborder-round scroll-y" style="border:0px; height:300px; margin:3px">
-                                        <div class="flexcolumn table tableborder">
-                                            <bank target="weapon.ranked_properties">
-
-                                            <div class="flexrow">
-                                                <div class="tablerow" style="width:150px">
-                                                    <p>eval{@%path%.name}</p>
-                                                </div>
-                                                <div class="tablerow" style="width:54px">
-                                                    <userinput type="text" target="eval{@weapon.ranked_properties.%index%.current}" style="width:50px; margin:2px"/>
-                                                </div>
-                                            </div>
-
-
-
-                                            </bank>
-                                        </div>
-                                    </div>
-                                </prompt>
-                            </click>
                         </div>
                     </div>
                     <div class="flexcolumn propertycol">
                         <p><b>Un-ranked Qualities</b></p>
                         <div class="flexrow scroll-y ranked-property">
                             <list target="weapon.unranked_properties">
-                            <div cond="eval{@%path%=0}">eval{@%path%.name}</div>
+                            <div cond="eval{@%path%>0}">eval{@%path%.name}</div>
                             </list>
-
-
-
-                        </div>
-                        <div class="sheetbutton">Modify
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+
+        <div class="flexrow" main-tab="qualities" style="padding-top:20px">
+            <div class="flexcolumn greyborder-round" style="width:50%; height:275px; margin:2px">
+                <p><b>Ranked Qualities</b></p>
+                <div class="flexcolumn scroll-y table tablebdr" style="border:1px black solid">
+                    <bank target="weapon.ranked_properties">
+                        <div class="flexrow">
+                            <div class=" flexrow tablerow" style="min-width:80%">
+                                <p>eval{@%path%.name}</p>
+
+                            </div>
+                            <div class="flexrow tablerow" style="width:100%">
+                                <input type="text" target="eval{weapon.ranked_properties.%index%}" style="width:30px; margin:2px" />
+                            </div>
+                        </div>        
+                    </bank>
+                </div>
+
+            </div>
+
+            <div class="flexcolumn greyborder-round" style="width:50%; height:275px; margin:2px">
+                <p><b> Unranked Qualities</b></p>
+                <div class="flexcolumn scroll-y table tablebdr" style="border:1px black solid">
+                    <bank target="weapon.unranked_properties">
+                        <div class="flexrow">
+                            <div class=" flexrow tablerow" style="min-width:80%">
+                                <p>eval{@%path%.name}</p>
+
+                            </div>
+                            <div class="flexrow tablerow" style="width:100%">
+                                <input type="checkbox" target="eval{weapon.unranked_properties.%index%}" check="1" uncheck="0" />
+                            </div>
+                        </div>        
+                    </bank>
+                </div>
+            </div>
+        </div>
