Item Card completed. Easy Peasy (well, until I start adding stuff no doubt.

--- a/html/weapon_card.html
+++ b/html/weapon_card.html
@@ -1,4 +1,4 @@
-<div class="flexrow weaponcard cardbg">
+<div class="flexrow itemcard cardbg">
     <div class="flexcolumn leftside">
         <br>
         <div class='flex flexcolumn white outline smooth' style='position : relative;'>
