1. Rewrote item cards to compress them all into one element 2. started working on charsheet equipment tab.
TODO:
1. get the slider/switch for equipping an item working
2. consider a combat tab for equipped weapons and items? 
3. Get criticism.

--- a/html/charsheet.html
+++ b/html/charsheet.html
@@ -135,9 +135,9 @@
         </div>
     </div>
     <tabs class="flexrow flexaround fit-x size4" tab-category='main-tab' tab-selected="alttext flexmiddle lrpadding smooth" tab-selected-style="height: 40px; width:100px; background-image:url(images/svg/tabbg-s.svg); font-family:'abel'; font-size:12pt; text-transform:uppercase ";'>
-        <tab class='flexmiddle link lrpadding cstab' primary="true">skills</tab>
+        <tab class='flexmiddle link lrpadding cstab'>skills</tab>
         <tab class='flexmiddle link lrpadding cstab'>talents</tab>
-        <tab class='flexmiddle link lrpadding cstab'>equipment</tab>
+        <tab class='flexmiddle link lrpadding cstab' primary="true">equipment</tab>
         <tab class='flexmiddle link lrpadding cstab'>powers</tab>
         <tab class='flexmiddle link lrpadding cstab'>bio</tab>
     </tabs>
@@ -155,3 +155,9 @@
 
 
     </div>
+    
+    <div main-tab="equipment">
+        <ui name="EQUIP_TAB_UI"/>
+    </div>
+    
+</div> 
