--- a/html/charsheet.html
+++ b/html/charsheet.html
@@ -136,6 +136,7 @@
     </div>
     <tabs class="flexrow flexaround fit-x size4" tab-category='main-tab' tab-selected="alttext flexmiddle lrpadding smooth" tab-selected-style="height: 40px; width:100px; background-image:url(images/svg/tabbg-s.svg); font-family:'abel'; font-size:12pt; text-transform:uppercase ";'>
         <tab class='flexmiddle link lrpadding cstab'>skills</tab>
+        <tab class='flexmiddle link lrpadding cstab'>combat</tab>
         <tab class='flexmiddle link lrpadding cstab'>talents</tab>
         <tab class='flexmiddle link lrpadding cstab' primary="true">equipment</tab>
         <tab class='flexmiddle link lrpadding cstab'>powers</tab>
