--- a/html/equipment_tab.html
+++ b/html/equipment_tab.html
@@ -1,70 +1,73 @@
 <div class="flexcolumn greyborder-round" style="width:100%">
-    <div class="table">
-        <h1>equipped Weapons</h1>
-        <table class='table'>
-            <col>
-            <col>
-            <col>
-            <col width="20">
-            <col width="20">
-            <col width="20">
-            <col>
-            <col>
-
-            <tr class="headingrow">
-                <th>Name</th>
-                <th>Skill</th>
-                <th>Range</th>
-                <th>Dam</th>
-                <th>Crit</th>
-                <th>qualities</th>
-                <th>equip</th>
-                <th>AAAAA</th>
-            </tr>
-
-            <tr>
-                <td><p>Unarmed</p></td>
-                <td><p>Brawl</p></td>
-                <td><p>Engaged</p></td>
-                <td><p>eval{@c.stats.br}</p></td>
-                <td style="font-family:'Eote Dice'; color:black">aaaa</td>
-
-                <td class=""> <div class="glyphicon glyphicon-info-sign"></td>
-                <td class ="">
-                    <label class="sheetswitch"><input type="checkbox" target="aaaa" checked="1" unchecked="0">
-                        <span class="slider"></span>
-                    </label>
-                </td>
-                <td>
-                    <div class="glyphicon glyphicon-edit link"></div><div class="glyphicon glyphicon-trash link"></div></td>
-
-            </tr>
-        </table>
-        <div class="flexrow"></div>
-
-
-    </div>
-
-    <div class="table">
-        <h1>Equipped armor</h1>
-    </div>
 
     <div class="flexcolumn">
-        <p>Add new Gear</p><div class="glyphicon glyphicon-plus link">
+        <p>Add new Gear</p>
+        <div class="glyphicon glyphicon-plus link">
             <click>
-                <create type="ITEM" target="inventory"/>
+                <create type="ITEM" target="inventory" />
             </click>
         </div>
-        <div class="flexrow"> COLUMN NAMES HEER</div>
-        <div class="flexcolumn table" style="width:100%">
-            <bank target="inventory">
-                <div class="flexrow">
-                    <div class="flexrow tablerow"><input target="%path%.info.qty"/>X</div>
-                    <div class="flexrow tablerow">eval{@%path%.info.weight}</div>
-                    <div class="flexrow tablerow">eval{@%path%.info.name.current}</div>
-                </div>
+        <div class="flexcolumn table">
+            <div class="flexrow">
+                <div class="tableheading" style="min-width: 50px">Qty</div>
+                <div class="tableheading" style="min-width: 30px">Enc</div>
+                <div class="tableheading" style="min-width: 250px">Name</div>
+                <div class="tableheading" style="min-width: 300px">Summary</div>
+                <div class="tableheading" style="min-width: 64px">Equip</div>
+                <div class="tableheading" style="min-width:100%"></div>
+            </div>
+            <div class="flexcolumn columns" style="width:100%; border:1px black solid">
+                <bank target="inventory">
+                    <div class="flexrow">
+                        <div class="flexrow tablerow start" style="width:50px">
+                            <input pattern="[0-9]" target="inventory.%index%.info.qty" style="width: 30px" />X
+                        </div>
+                        <div class="flexrow tablerow midrow" style="min-width:30px">eval{@%path%.info.weight}</div>
+                        <div class="flexrow tablerow midrow" style="min-width: 250px">eval{@%path%.info.name.current}</div>
+                        <div class="flexrow tablerow midrow" style="min-width:300px">
+                            <div cond="eval{'@%path%.info.type'=='Weapon'}">
+                                <div><b>Skill: </b>eval{@%path%.weapon.skill} ; <b>Damage:</b>Eval{@%path%.weapon.dam}
+                                    ; <b>Crit:</b>
+                                    eval{@%path%.weapon.crit}</div>
+                            </div>
+
+                            <div cond="eval{'@%path%.info.type'=='Armor'}">
+
+                                <div><b>soak: </b>eval{@%path%.armor.soak}; <b>Defence (M|R): </b>eval{@%path%.equip.mdef}
+                                    |
+                                    eval{@%path%.equip.rdef};</div>
+
+                            </div>
+
+                            <div class="description1line" cond="eval{'@%path%.info.type'=='Item'}" style="max-width:300px">
+                                traverse{inventory.%index%.info.notes.current}
+
+                            </div>
+                        </div>
+                        <div class='flexrow tablerow midrow' style="min-width:64px;">
+                            <div cond="eval{'@%path%.info.type'!='Item'}">
+                                <label class="smallSwitch"><input type="checkbox" target="%path%.tags.equipped" check="1"
+                                        unchecked="0" isChecked="eval{@%path%.tags.equipped==1}">
+                                    <span class="smallSlider"></span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="flexrow tablerow end" style="width:100%">
+                            <div class="glyphicon glyphicon-edit link" style="margin-right:3px">
+                                <click>
+                                    <change target="inventory.%index%" />
+                                </click>
+                            </div>
+                            <div class="glyphicon glyphicon-trash link">
+                                <click>
+                                    <delete target="inventory.%index%" />
+                                </click>
+                            </div>
+                        </div>
+                    </div>
+            </div>
             </bank>
 
         </div>
     </div>
-
+</div>
