--- a/html/skillstab_combat.html
+++ b/html/skillstab_combat.html
@@ -66,7 +66,7 @@
                             <prompt hieght="auto" width="auto">
                                 <div class="flexcolumn roller ">
                                     <p>Task Pool</p>
-                                    <div class="flexrow" style=''>
+                                    <div class="flexrow">
 
                                         <userinput class='prodieinput flexmiddle' type='text' value='eval{@pool1}' varname='prodice'/>
                                         <userinput class='abdieinput flexmiddle' type='text' value='eval{@pool2}' varname='abdice'/>
