rearranged existing files for ease of navigation. Fixed problem with item_card table not displaying correctly

--- a/html/elements/item_card/itemcard_weapons.html
+++ b/html/elements/item_card/itemcard_weapons.html
@@ -27,7 +27,7 @@
         </div>
         <div class="flexcolumn rtgbg">
             <input target="weapon.crit" />
-            <div class="rtglabel"> Critical;
+            <div class="rtglabel"> Critical
             </div>
         </div>
     </div>
@@ -85,7 +85,7 @@
 <div class="flexrow" main-tab="qualities" style="padding-top:20px">
     <div class="flexcolumn greyborder-round" style="width:50%; height:275px; margin:2px">
         <p><b>Ranked Qualities</b></p>
-        <div class="flexcolumn scroll-y table" style="border:1px black solid; max-height:250px">
+        <div class="flexcolumn scroll-y table" style="border:1px black solid; height:250px">
             <bank target="weapon.ranked_properties">
                 <div class="flexrow">
                     <div class=" flexrow tablerow start" style="min-width:80%">
