--- a/html/actors/pc_sheet/equipment_tab.html
+++ b/html/actors/pc_sheet/equipment_tab.html
@@ -8,10 +8,11 @@
             </click>
         </div>
         <div class="flexcolumn table">
-            <div class="flexrow">
+            <div class="flexrow" style="border-bottom: 1px dotted black; margin-bottom:-1px">
+                <div class="tableheading" style="min-width: 100px">Image</div>
                 <div class="tableheading" style="min-width: 50px">Qty</div>
                 <div class="tableheading" style="min-width: 30px">Enc</div>
-                <div class="tableheading" style="min-width: 250px">Name</div>
+                <div class="tableheading" style="min-width: 150px">Name</div>
                 <div class="tableheading" style="min-width: 300px">Summary</div>
                 <div class="tableheading" style="min-width: 64px">Equip</div>
                 <div class="tableheading" style="min-width:100%"></div>
@@ -19,11 +20,14 @@
             <div class="flexcolumn columns" style="width:100%; border:1px black solid">
                 <bank target="inventory">
                     <div class="flexrow">
-                        <div class="flexrow tablerow start" style="width:50px">
+                        <div class="flexrow tablerow start" style="min-width:100px">
+                                <ui name='ui_image' scope-lookup="inventory.%index%.info.img" scope-fit='cover'/>
+                        </div>
+                        <div class="flexrow tablerow midrow" style="width:50px">
                             <input pattern="[0-9]" target="inventory.%index%.info.qty" style="width: 30px" />X
                         </div>
                         <div class="flexrow tablerow midrow" style="min-width:30px">eval{@%path%.info.weight}</div>
-                        <div class="flexrow tablerow midrow" style="min-width: 250px">eval{@%path%.info.name.current}</div>
+                        <div class="flexrow tablerow midrow" style="min-width: 150px">eval{'@%path%.info.name.current'}</div>
                         <div class="flexrow tablerow midrow" style="min-width:300px">
                             <div cond="eval{'@%path%.info.type'=='Weapon'}">
                                 <div><b>Skill: </b>eval{@%path%.weapon.skill} ; <b>Damage:</b>Eval{@%path%.weapon.dam}
