Started working on combat. forgot to branch code. Silly me

--- a/html/actors/pc_sheet/charsheet.html
+++ b/html/actors/pc_sheet/charsheet.html
@@ -160,5 +160,9 @@
     <div main-tab="equipment">
         <ui name="EQUIP_TAB_UI"/>
     </div>
+
+    <div main-tab="combat">
+        <ui name='COMBAT_TAB_UI'></ui>
+    </div>
     
 </div> 
