--- a/html/elements/item_card/itemcard_weapons.html
+++ b/html/elements/item_card/itemcard_weapons.html
@@ -48,12 +48,12 @@
         </div>
 
         <div class="flexrow weapstats">
-            <p><b> Range:</b></p> <select target="weapon.range">
-                <option value="0">Engaged</option>
-                <option value="1">Short</option>
-                <option value="2"> Medium</option>
-                <option value="3"> Long</option>
-                <option value="4"> Extreme</option>
+            <p><b> Range:</b></p> <select target="weapon.rng">
+                <option>Engaged</option>
+                <option>Short</option>
+                <option> Medium</option>
+                <option> Long</option>
+                <option> Extreme</option>
             </select>
         </div>
         <div class="flexrow weapstats">
