--- a/html/aaaaaaaaa.html
+++ b/html/aaaaaaaaa.html
@@ -396,7 +396,7 @@
                                                     <delete target="inventory.%index%"></delete>
                                                 </click>
                                             </span>
-                                        </div>
+                                        </div>x
                                     </div>
                                 </div>
                             </div>
