--- a/html/actors/pc_sheet/combat_tab.html
+++ b/html/actors/pc_sheet/combat_tab.html
@@ -6,6 +6,12 @@
             <!--Stimpack counter-->
             <!--TODO:
             1. Need to add a settings dialogue to switch between droid stimpacks and emergency repair kits, Maybe just a dropdown?-->
+            <div class=flexrow:>
+                <label>Healing type:</label><select target="info.healing">
+                    <option>Stimpak</option>
+                    <option>Repair Patch</option>
+                </select>
+            </div>
             <div class="flexrow">
                 <label>Healing remaining: </label><input style="width:50px" type="text" target="counters.stimpaks" />
             </div>
@@ -31,59 +37,69 @@
                     <input type="checkbox" onClick="false" target="counters.stimuse" check=5 uncheck=4 isChecked="eval{@c.counters.stimuse > 4}" />
                     <span class="pip"></span>
                 </div>
-                <div class="sheetbutton">Heal (eval{@c.counters.stimuse})
-                    <click>
-                        <setAttr target="counters.wounds.current" value="eval{@c.counters.wounds.current + @c.counters.stimuse}" />
-                        <setAttr target="counters.stimuse.current" value="eval{@c.counters.stimuse - 1}" cond="eval{@c.counters.stimuse>0}" />
-                        <setAttr target="counters.stimpaks.current" value="eval{@c.counters.stimpaks - 1}" cond="eval{@c.counters.stimpaks>0}" />
-
-                    </click>
+                <div class="flexrow sheetbutton" cond="eval{c.counters.stimpaks>0 || @c.counters.stimuse>0}">Heal: (
+                    <div cond="eval{'@c.info.healing'=='Stimpak'}">eval{@c.counters.stimuse.current}</div>
+                    <div cond="eval{'@c.info.healing'=='Repair Patch'}">3</div>
+                    )
                 </div>
-            </div>
+                <click>
 
+                    <setAttr target="counters.stimuse.current" value="eval{@c.counters.stimuse - 1}" cond="eval{@c.counters.stimuse>0}" />
+                    <setAttr target="counters.stimpaks.current" value="eval{@c.counters.stimpaks - 1}" cond="eval{@c.counters.stimpaks>0}" />
+                    <setAttr target="counters.wounds.current" value="eval{@c.counters.wounds.current + @c.counters.stimuse}"
+                        cond="eval{'@c.info.healing'=='Stimpak'}" />
+                    <setAttr target="counters.wounds.current" value="eval{@c.counters.wounds.current +3}" cond="eval{'@c.info.healing'=='Repair Patch'}" />
+
+                </click>
+            </div>
         </div>
 
     </div>
 
-    <!--equipment and combat options side-->
-    <div class="flexcolumn greyborder-round" style="border:none; width:100%">
-        <div>
-            <!--equipped weapons table-->
-            <div class="flexcolumn table">
-                <div class="flexrow tableheadings">
-                    <div style="width:100px">Name</div>
-                    <div style="width:100px">Skill</div>
-                    <div style="width:100px">Range</div>
-                    <div style="width:50px">Dam</div>
-                    <div style="width:50px">Crit</div>
-                    <div style="width:50px">quals</div>
-                    <div></div>
+</div>
 
-                </div>
-                <bank target="inventory">
-                    <div class="flexrow" cond="eval{'@%path%.info.type'=='Weapon' && @%path%.tags.equipped==1}">
-                        <div class="tablerow start" style="width:100px">eval{@%path%.info.name}</div>
-                        <div class="tablerow midrow" style="width:100px">eval{@%path%.weapon.skill}</div>
-                        <div class="tablerow midrow" style="width:100px">eval{@%path%.weapon.rng}</div>
-                        <div class="tablerow midrow" style="width:50px">eval{@%path%.weapon.dam}</div>
-                        <div class="tablerow midrow" style="width:50px">eval{@%path%.weapon.crit}</div>
-                        <div class="tablerow midrow" style="width:50px">
-                            <div class="glyphicon glyphicon-info-sign link">
-                                <!--display weapon qualities here-->
-                            </div>
+<!--equipment and combat options side-->
+<div class="flexcolumn greyborder-round" style="border:none; width:100%">
+    <div>
+        <!--equipped weapons table-->
+        <div class="flexcolumn table">
+            <div class="flexrow tableheadings">
+                <div style="width:100px">Name</div>
+                <div style="width:100px">Skill</div>
+                <div style="width:100px">Range</div>
+                <div style="width:50px">Dam</div>
+                <div style="width:50px">Crit</div>
+                <div style="width:50px">quals</div>
+                <div></div>
+
+            </div>
+            <bank target="inventory">
+                <div class="flexrow" cond="eval{'@%path%.info.type'=='Weapon' && @%path%.tags.equipped==1}">
+                    <div class="tablerow start" style="width:100px">eval{@%path%.info.name}</div>
+                    <div class="tablerow midrow" style="width:100px">eval{@%path%.weapon.skill}</div>
+                    <div class="tablerow midrow" style="width:100px">eval{@%path%.weapon.rng}</div>
+                    <div class="tablerow midrow" style="width:50px">eval{@%path%.weapon.dam}</div>
+                    <div class="tablerow midrow" style="width:50px">eval{@%path%.weapon.crit}</div>
+                    <div class="tablerow midrow" style="width:50px">
+                        <div class="glyphicon glyphicon-info-sign link">
+                            <!--display weapon qualities here-->
+                            <click>
+
+                            </click>
                         </div>
-                        <div class="tablerow rowend"></div>
-                        <div>
-                            <label class="smallSwitch"><input type="checkbox" target="inventory.%index%.tags.equipped" check="1"
-                                uncheck="0" isChecked="eval{@c.inventory.%index%.tags.equipped.current==1}">
+                    </div>
+                    <div class="tablerow rowend"></div>
+                    <div>
+                        <label class="smallSwitch"><input type="checkbox" target="inventory.%index%.tags.equipped"
+                                check="1" uncheck="0" isChecked="eval{@c.inventory.%index%.tags.equipped.current==1}">
                             <span class="smallSlider"></span>
                         </label>
-                        </div>
-
                     </div>
-            </div>
-            </bank>
+
+                </div>
         </div>
+        </bank>
     </div>
+</div>
 </div>
 </div>
